# conda_curation

./: .gitignore  Cargo.toml  LICENSE  README.md  matchspecs.yaml  update_repodata.bash  update_repodata.sh
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
matchspecs/: newpython.yaml  secure_python.yaml
src/: lib.rs  logs.rs  main.rs  matchspeccache.rs  matchspecyaml.rs  packagerelations.rs  rawrepodata.rs
