[package]
name = "conda_curation"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"
license = "MIT"
description = "Reduce conda repodata to enforce policy and speed up solves. Alpha software."
repository = "https://github.com/AaronOpfer/conda_curation"
readme = "README.md"
categories = ["conda"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indexmap = { version = "2.1.0", features = ["serde", "rayon"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
rattler_conda_types = "0.22.0"
rayon = "1.8.0"
serde = "1.0.192"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tikv-jemallocator = "0.5.4"
typed-arena = "2.0.2"
