[package]
name = "conda_curation"
version = "0.8.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"
description = "Reduce conda repodata to enforce policy and speed up solves. Alpha software."
repository = "https://github.com/AaronOpfer/conda_curation"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
fxhash = "0.2.1"
itertools = "0.13.0"
lazy_static = "1.4.0"
rattler = "0.28.3"
rattler_conda_types = "^0.29.2"
rattler_repodata_gateway = "0.21.1"
rayon = "1.8.0"
regex = "1.10.6"
reqwest = "0.12.4"
reqwest-middleware = "0.3.1"
serde = "1.0.192"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.37.0", features = ["tokio-macros", "full"] }
typed-arena = "2.0.2"
url = "2.5.0"

